--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ python-decouple==3.8
 whitenoise==6.6.0
 gunicorn==21.2.0
 psycopg2-binary==2.9.9
+mysqlclient==2.2.0
 django-crispy-forms==2.1
 crispy-bootstrap5==0.7
 stripe==7.8.0
+django-jazzmin==2.6.0
