--- a/.env.example
+++ b/.env.example
@@ -1,33 +1,30 @@
 # Django Settings
-SECRET_KEY=your-secret-key-here-change-this-in-production
+SECRET_KEY=your-secret-key-here-generate-a-new-one
 DEBUG=False
-ALLOWED_HOSTS=yourdomain.com,www.yourdomain.com
+ALLOWED_HOSTS=jigsimurherbalwonders.com,www.jigsimurherbalwonders.com
 
 # Database Configuration (MySQL/MariaDB for cPanel)
 DB_ENGINE=django.db.backends.mysql
-DB_NAME=your_database_name
-DB_USER=your_database_user
-DB_PASSWORD=your_database_password
+DB_NAME=your_cpanel_database_name
+DB_USER=your_cpanel_database_user
+DB_PASSWORD=your_cpanel_database_password
 DB_HOST=localhost
 DB_PORT=3306
 
 # Email Configuration
-EMAIL_HOST=mail.yourdomain.com
+EMAIL_HOST=mail.jigsimurherbalwonders.com
 EMAIL_PORT=587
 EMAIL_USE_TLS=True
-EMAIL_HOST_USER=info@yourdomain.com
+EMAIL_HOST_USER=info@jigsimurherbalwonders.com
 EMAIL_HOST_PASSWORD=your_email_password
-DEFAULT_FROM_EMAIL=JigsimurHerbal <info@yourdomain.com>
-
-# Email Addresses
-CONTACT_EMAIL=info@yourdomain.com
-ORDERS_EMAIL=orders@yourdomain.com
-SUPPORT_EMAIL=support@yourdomain.com
-NOREPLY_EMAIL=noreply@yourdomain.com
+DEFAULT_FROM_EMAIL=JigsimurHerbal <info@jigsimurherbalwonders.com>
 
 # Site URL
-SITE_URL=https://yourdomain.com
+SITE_URL=https://jigsimurherbalwonders.com
 
-# Stripe Payment Settings
-STRIPE_PUBLISHABLE_KEY=pk_live_your_publishable_key
-STRIPE_SECRET_KEY=sk_live_your_secret_key
+# Stripe Payment Settings (for payments)
+STRIPE_PUBLISHABLE_KEY=your_stripe_publishable_key
+STRIPE_SECRET_KEY=your_stripe_secret_key
+
+# Email Testing (set to True to test SMTP in development)
+FORCE_SMTP_BACKEND=False
